--- a/MvcGraduate/MvcGraduate/Views/Grade/GetSubjectMaterial.cshtml
+++ b/MvcGraduate/MvcGraduate/Views/Grade/GetSubjectMaterial.cshtml
@@ -13,7 +13,7 @@
                         foreach (var item in Model)
                         {
                             <li>
-                                <span class="info" onclick="window.open('rkzl_detail.php?id=19','','height=500,width=820,status=1,toolbar=no,menubar=no,location=no,scrollbars=yes,left=200,top=100,resizable=yes');">[@item.Subject]@item.MaterialName</span>
+                                <span class="info" onclick="window.open('@Url.Action("Details_SubjectMaterial", "Grade", new { id = item.ID })', '', 'height=500,width=820,status=1,toolbar=no,menubar=no,location=no,scrollbars=yes,left=200,top=100,resizable=yes');">[@item.Subject]@item.MaterialName</span>
                                 <span class="time">@item.UploadTime.ToShortDateString()</span>
                             </li>
                         }
