--- a/MvcGraduate/MvcGraduate/Views/Home/GetNotify.cshtml
+++ b/MvcGraduate/MvcGraduate/Views/Home/GetNotify.cshtml
@@ -6,7 +6,7 @@
         @foreach (var item in Model)
         {
             <li>
-                <a src="#" onclick="window.open('@Url.Action("Details_NotiyNews", "Home", new { id = item.ID })', '', 'height=500,width=820,status=1,toolbar=no,menubar=no,location=no,scrollbars=yes,left=200,top=100,resizable=yes');">@Html.DisplayFor(modelItem => item.Title)</a>
+                <a src="#" onclick="window.open('@Url.Action("Detail_Notify", "NotifyNews", new { id = item.ID })', '', 'height=500,width=820,status=1,toolbar=no,menubar=no,location=no,scrollbars=yes,left=200,top=100,resizable=yes');">@Html.DisplayFor(modelItem => item.Title)</a>
             </li>
         }
     </ul>
