--- a/MvcGraduate/MvcGraduate/Views/NotifyNews/GetSchoolNotify.cshtml
+++ b/MvcGraduate/MvcGraduate/Views/NotifyNews/GetSchoolNotify.cshtml
@@ -13,7 +13,7 @@
                         foreach (var item in Model)
                         {
                             <li>
-                                <span class="info" onclick="window.open('@Url.Action("Detail_Notify", "NotifyNews", new { id = item.ID })', '', 'height=500,width=820,status=1,toolbar=no,menubar=no,location=no,scrollbars=yes,left=200,top=100,resizable=yes');">@item.Title</span>
+                                <span class="info" onclick="window.open('@Url.Action("Details_Notify_School", "NotifyNews", new { id = item.ID })', '', 'height=500,width=820,status=1,toolbar=no,menubar=no,location=no,scrollbars=yes,left=200,top=100,resizable=yes');">@item.Title</span>
                                 <span class="time">@item.PublishTime.ToShortDateString()</span>
                             </li>
                         }
