--- a/MvcGraduate/MvcGraduate/Views/NotifyNews/Index.cshtml
+++ b/MvcGraduate/MvcGraduate/Views/NotifyNews/Index.cshtml
@@ -12,7 +12,15 @@
             { "id": 1208203301 },
             function (data) {
                 $('.navigation_centre_right').html(data);
-        });
+            });
+        function GetNotify_School() {
+            $.post(
+                "@Url.Action("GetSchoolNotify", "NotifyNews")",
+                { "id": 1208203301 },
+                function (data) {
+                    $('.navigation_centre_right').html(data);
+                });
+        }
 
     </script>
 }
@@ -20,7 +28,7 @@
 <div class="navigation_centre">
     <div class="navigation_centre_left">
         <div class="navigation_menu_bg">活动通知</div>
-        <div>学校新闻</div>
+        <div onclick="GetNotify_School()">学校新闻</div>
         <div>考试通知</div>
         <div>投票调查</div>
         <div>事务信息</div>
