--- a/MvcGraduate/MvcGraduate/Content/CSS/StudyCss.css
+++ b/MvcGraduate/MvcGraduate/Content/CSS/StudyCss.css
@@ -17,7 +17,7 @@ ul {
 		        color: #4993b3;
 		        font-weight: 600;
 		        line-height: 33px;
-		        margin: 30px 0 0 50px;
+		        margin: 30px 0 0 0px;
 		        font-size: 18px;
 		        text-align: left;
 		        cursor: default;
@@ -34,7 +34,7 @@ ul {
 		    border-spacing: 2px;
 		    position: relative;
 		    width: 760px;
-		    margin-left: 50px;
+		    
 		    border-collapse: collapse;
 	    }
 		    .td_head td {
@@ -52,21 +52,12 @@ ul {
 			    font-size: 14px;
 		    }
             /*课程表*/
-            .Study_Scheduletable{
+            .Study_Scheduletable td{
 	            vertical-align: middle;
 			    border-spacing: 0px;
-                margin-left:50px;
-                margin-top:20px;
-            }
-            .Study_Scheduletable tr,.Study_Scheduletable td{
-                border:  1px solid #DCDCDC;
-			    width: 80px;
-			    overflow: hidden;
-			    height: 32px;
-			    text-align: center;
+                text-align: center;
 			    font-size: 16px;
-			    line-height: 20px;
-			    cursor: default;
+                border:  1px solid #DCDCDC;
             }
     /*课程表结束*/
     /*请假开始*/
@@ -91,7 +82,7 @@ ul {
 			    .vacationUl table {
                     margin-top:30px;
 				    width: 760px;
-				    margin-left: 50px;
+
 				    border-collapse: collapse;
 			    }
 			    .vacationUl table td {
