--- a/MvcGraduate/MvcGraduate/Views/NotifyNews/Detail_Notify.cshtml
+++ b/MvcGraduate/MvcGraduate/Views/NotifyNews/Detail_Notify.cshtml
@@ -1,41 +1,47 @@
-﻿<div id="#details_table_div">
-    <table border="0" width="100%" cellspacing="0" cellpadding="3" class="small">
-        <tr>
-            <td>
-                <img align="absmiddle" src="~/Images/notify_new.gif" />
-                <span class="big3">公告通知</span>
-            </td>
-        </tr>
-    </table>
-    <table width="80%" align="center" border-spacing="0" class="TableBlock">
-        <tr>
-            <td>标题：</td>
-            <td>@Model.Title</td>
-        </tr>
-        <tr>
-            <td>通知内容：</td>
-            <td>@Model.Summary</td>
-        </tr>
-        <tr>
-            <td>通知对象：</td>
-            <td>@ViewBag.NotifyPeoples</td>
-        </tr>
-        <tr>
-            <td>发布人：</td>
-            <td>@Model.Students.Name</td>
-        </tr>
-        <tr>
-            <td>发布时间：</td>
-            <td>@Model.PublishTime</td>
-        </tr>
-        <tr>
-            <td>附件</td>
-            <td>@Model.Appendix</td>
-        </tr>
-        <tr align="center">
-            <td nowrap="" colspan="2" class="TableControl">
-                <input class="BigButton" type="button" value="关闭" />
-            </td>
-        </tr>
-    </table>
-</div>
+﻿<head>
+    <title></title>
+    <link rel="stylesheet" type="text/css" href="~/Content/CSS/DetailsTableCss.css" />
+</head>
+<body>
+    <div id="#details_table_div">
+        <table border="0" width="80%" cellspacing="0">
+            <tr>
+                <td>
+                    <img src="~/Images/notify_new.gif" />
+                    <span class="big3">公告通知</span>
+                </td>
+            </tr>
+        </table>
+        <table width="80%" align="center" class="TableBlock">
+            <tr>
+                <td align="center">标题：</td>
+                <td>@Model.Title</td>
+            </tr>
+            <tr>
+                <td align="center">通知内容：</td>
+                <td>@Model.Summary</td>
+            </tr>
+            <tr>
+                <td align="center">通知对象：</td>
+                <td>@ViewBag.NotifyPeoples</td>
+            </tr>
+            <tr>
+                <td align="center">发布人：</td>
+                <td>@Model.Students.Name</td>
+            </tr>
+            <tr>
+                <td align="center">发布时间：</td>
+                <td>@Model.PublishTime</td>
+            </tr>
+            <tr>
+                <td align="center">附件</td>
+                <td>@Model.Appendix</td>
+            </tr>
+            <tr align="center">
+                <td nowrap="" colspan="2" class="TableControl">
+                    <input class="BigButton" type="button" value="关闭" />
+                </td>
+            </tr>
+        </table>
+    </div>
+</body>
