--- a/MvcGraduate/MvcGraduate/Views/Interaction/GetArticle.cshtml
+++ b/MvcGraduate/MvcGraduate/Views/Interaction/GetArticle.cshtml
@@ -34,9 +34,9 @@
                                 <td>@item.ClickRate</td>
                                 <td>@sharesName</td>
                                 <td>
-                                    <a href="javascript:;" onclick="window.open('@Url.Action("Details_Images", "Interaction", new { id = item.ID })', '', 'height=500,width=820,status=1,toolbar=no,menubar=no,location=no,scrollbars=yes,left=200,top=100,resizable=yes');">详情</a>
+                                    <a href="javascript:;" onclick="window.open('@Url.Action("Details_Article", "Interaction", new { id = item.ID })', '', 'height=500,width=820,status=1,toolbar=no,menubar=no,location=no,scrollbars=yes,left=200,top=100,resizable=yes');">详情</a>
                                     <a href="#">分享</a>
-                                    <a href="#">修改</a>
+                                    <a href="javascript:;" onclick="window.open('@Url.Action("Edit_Article", "Interaction", new { id = item.ID })', '', 'height=500,width=820,status=1,toolbar=no,menubar=no,location=no,scrollbars=yes,left=200,top=100,resizable=yes');">修改</a>
                                     <a href="javascript:;" onclick="window.open('@Url.Action("Details_HomeWork", "Study",new {id= item.ID})', '', 'height=500,width=820,status=1,toolbar=no,menubar=no,location=no,scrollbars=yes,left=200,top=100,resizable=yes');">分享</a>
                                     <a href="#">删除</a>
                                     <a href="#">管理评论</a>
