--- a/MvcGraduate/MvcGraduate/Views/Interaction/Index.cshtml
+++ b/MvcGraduate/MvcGraduate/Views/Interaction/Index.cshtml
@@ -20,13 +20,14 @@
                     $('.navigation_centre_right').html(data);
             });
         }
-        function GetArticle() {
+        function GetArticle()
+        {
             $.post(
                 "@Url.Action("GetArticle", "Interaction")",
-                { "id": 1208203301 },
-                function (data) {
-                    $('.navigation_centre_right').html(data);
-            });
+        { "id": 1208203301 },
+        function (data) {
+            $('.navigation_centre_right').html(data);
+        });
         }
     </script>
 }
