我的互动：基本OK，差一些修改。基本页面都出来了

--- a/MvcGraduate/MvcGraduate/Views/Interaction/Details_Images.cshtml
+++ b/MvcGraduate/MvcGraduate/Views/Interaction/Details_Images.cshtml
@@ -16,7 +16,7 @@
         </table>
         <table width="80%" align="center" class="TableBlock">
             <tr>
-                <td align="center">上传时间</td>
+                <td style="width:146px" align="center">上传时间</td>
                 <td>@Model.PubLishTime</td>
             </tr>
             <tr>
@@ -33,7 +33,7 @@
             </tr>
             <tr>
                 <td align="center">图片描述</td>
-                <td><img src="@Model.ImagePath"/></td>
+                <td><img style="margin:4px" src="@Model.ImagePath"/></td>
             </tr>
             <tr align="center">
                 <td nowrap="" colspan="2" class="TableControl">
