--- a/MvcGraduate/MvcGraduate/Views/Interaction/Index.cshtml
+++ b/MvcGraduate/MvcGraduate/Views/Interaction/Index.cshtml
@@ -6,7 +6,7 @@
     <script>
         $('.title_navigate a:eq(4) div').addClass('logo_left_title_select');
         $.post(
-            "@Url.Action("GetShareImagesPeopleName", "Interaction")",
+            "@Url.Action("GetImagesInfo", "Interaction")",
             { "id": 1208203301 },
             function (data) {
                 $('.navigation_centre_right').html(data);
@@ -14,7 +14,7 @@
         function ManageImage()
         {
             $.post(
-                "@Url.Action("GetShareImagesPeopleName", "Interaction")",
+                "@Url.Action("GetImagesInfo", "Interaction")",
                 { "id": 1208203301 },
                 function (data) {
                     $('.navigation_centre_right').html(data);
@@ -37,14 +37,31 @@
                     $('.navigation_centre_right').html(data);
             });
         }
+        function GetShare_Article() {
+            $.post(
+                "@Url.Action("GetShareArticle", "Interaction")",
+                { "id": 1208203301 },
+                function (data) {
+                    $('.navigation_centre_right').html(data);
+                });
+        }
+        function GetShare_ImagesInfo() {
+            $.post(
+                "@Url.Action("GetShareImagesInfo", "Interaction")",
+                { "id": 1208203301 },
+                function (data) {
+                    $('.navigation_centre_right').html(data);
+            });
+        }
+        
     </script>
 }
 <div class="navigation_centre">
     <div class="navigation_centre_left">
         <div class="navigation_menu_bg" onclick="ManageImage()">照片管理</div>
-        <div>分享照片</div>
+        <div onclick="GetShare_ImagesInfo()">分享照片</div>
         <div onclick="GetArticle()">文章管理</div>
-        <div>分享文章</div>
+        <div onclick="GetShare_Article()">分享文章</div>
         <div onclick="GetQuestions()">我的提问</div>
     </div>
     <div class="navigation_centre_right">
