UEditor:大部分都实现了。 问题是：现在后台传递的数据到前台会被编码，不知道怎么解决！

--- a/MvcGraduate/MvcGraduate/Views/Home/Index.cshtml
+++ b/MvcGraduate/MvcGraduate/Views/Home/Index.cshtml
@@ -61,7 +61,18 @@
     </script>
 }
 
-
+<div id="zhuye" style=" width: 1125px;">
+    <div class="common_top">
+        <ul>
+            <li><img src="~/Images/sys_message_ico.png" /></li>
+            <li class="no_news"><a href="#">无信息</a></li>
+            <li><img src="~/Images/sys_message_ico.png" /></li>
+            <li class="no_news"><a href="#">无信息</a></li>
+            <li><img src="~/Images/sys_message_ico.png" /></li>
+            <li class="no_news"><a href="#">无信息</a></li>
+            <li class="gengduo"><a href="#">更多>></a></li>
+        </ul>
+    </div>
     <div class="zhuye_centre">
         <div class="zhuye_centre_left">
             <div class="zhuye_centre_left_1">
@@ -151,7 +162,7 @@
         </div>
         <div class="zhuye_centre_right">
             <div class="zhuye_centre_right_1">
-                <div><img src="~/Images/kebiao.png" width="150" height="49" id="menu_bg" /></div> 
+                <div><img src="~/Images/kebiao.png" width="150" height="49" id="menu_bg" /></div>
                 <div id="JS_Home_TimeTable_Div"></div>
             </div>
             @*教师*@
@@ -192,5 +203,7 @@
             </div>
         </div>
     </div>
+</div>
+    
     
 
