--- a/MvcGraduate/MvcGraduate/Views/NotifyNews/Index.cshtml
+++ b/MvcGraduate/MvcGraduate/Views/NotifyNews/Index.cshtml
@@ -32,17 +32,29 @@
 
     </script>
 }
-
-<div class="navigation_centre">
-    <div class="navigation_centre_left">
-        <div onclick="GetAllNotify()" class="navigation_menu_bg">活动通知</div>
-        <div onclick="GetNotify_School()">学校新闻</div>
-        <div>考试通知</div>
-        <div>投票调查</div>
-        <div>事务信息</div>
-        <div>电子校历</div>
+<div id="zhuye">
+    <div class="common_top">
+        <ul>
+            <li><img src="~/Images/sys_message_ico.png" /></li>
+            <li class="no_news"><a href="#">无信息</a></li>
+            <li><img src="~/Images/sys_message_ico.png" /></li>
+            <li class="no_news"><a href="#">无信息</a></li>
+            <li><img src="~/Images/sys_message_ico.png" /></li>
+            <li class="no_news"><a href="#">无信息</a></li>
+            <li class="gengduo"><a href="#">更多>></a></li>
+        </ul>
     </div>
-    <div class="navigation_centre_right">
+    <div class="navigation_centre">
+        <div class="navigation_centre_left">
+            <div onclick="GetAllNotify()" class="navigation_menu_bg">活动通知</div>
+            <div onclick="GetNotify_School()">学校新闻</div>
+            <div>考试通知</div>
+            <div>投票调查</div>
+            <div>事务信息</div>
+            <div>电子校历</div>
+        </div>
+        <div class="navigation_centre_right">
 
+        </div>
     </div>
 </div>
