--- a/MvcGraduate/MvcGraduate/Views/Shared/_Layout.cshtml
+++ b/MvcGraduate/MvcGraduate/Views/Shared/_Layout.cshtml
@@ -24,7 +24,7 @@
         </div>
     </div>
     <div id="main">
-        <div id="zhuye">
+        @*<div id="zhuye">
             <div class="common_top">
                 <ul>
                     <li><img src="~/Images/sys_message_ico.png" /></li>
@@ -37,7 +37,8 @@
                 </ul>
             </div>
             @RenderBody()
-        </div>
+        </div>*@
+        @RenderBody()
     </div>
     @RenderPage("~/Views/Shared/FriendlyLink.cshtml")
     <div id="foot">
