--- a/MvcGraduate/MvcGraduate/Views/Grade/Index.cshtml
+++ b/MvcGraduate/MvcGraduate/Views/Grade/Index.cshtml
@@ -47,15 +47,28 @@
         }
 </script>
 }
-
-<div class="navigation_centre">
-    <div class="navigation_centre_left">
-        <div class="navigation_menu_bg" onclick="GetBanwei()">查看班委</div>
-        <div onclick="GetTeacher()">任课老师</div>
-        <div onclick="GetSubjectMaterial()">课程资料</div>
-        <div onclick="GetClassmate()">我的同学</div>
+<div id="zhuye">
+    <div class="common_top">
+        <ul>
+            <li><img src="~/Images/sys_message_ico.png" /></li>
+            <li class="no_news"><a href="#">无信息</a></li>
+            <li><img src="~/Images/sys_message_ico.png" /></li>
+            <li class="no_news"><a href="#">无信息</a></li>
+            <li><img src="~/Images/sys_message_ico.png" /></li>
+            <li class="no_news"><a href="#">无信息</a></li>
+            <li class="gengduo"><a href="#">更多>></a></li>
+        </ul>
     </div>
-    <div class="navigation_centre_right" id="Js_Study_RightBigDiv">
+    <div class="navigation_centre">
+        <div class="navigation_centre_left">
+            <div class="navigation_menu_bg" onclick="GetBanwei()">查看班委</div>
+            <div onclick="GetTeacher()">任课老师</div>
+            <div onclick="GetSubjectMaterial()">课程资料</div>
+            <div onclick="GetClassmate()">我的同学</div>
+        </div>
+        <div class="navigation_centre_right" id="Js_Study_RightBigDiv">
 
+        </div>
     </div>
 </div>
+
