--- a/MvcGraduate/MvcGraduate/Views/Interaction/Edit_Images.cshtml
+++ b/MvcGraduate/MvcGraduate/Views/Interaction/Edit_Images.cshtml
@@ -20,50 +20,55 @@
                 </td>
             </tr>
         </table>
-        <table width="80%" align="center" class="TableBlock">
-            <tr style="height:50px">
-                <td style="width:146px;" align="center">分享给：</td>
-                <td>
-                    <textarea class="BigStatic">@ViewBag.SharesName</textarea>
-                </td>
-            </tr>
-            <tr>
-                <td align="center">图片预览：</td>
-                <td><img style="margin:4px;" src="@Model.ImagePath"/></td>
-            </tr>
-            <tr>
-                <td align="center">附件文档：</td>
-                <td>@Html.EditorFor(model => model.Appendix)</td>
-            </tr>
-            <tr>
-                <td align="center">附件上传：</td>
-                <td>
-                    <a class="addfile" href="javascript:;">
-                        添加附件
-                        <input class="addfile" type="file" size="1" style="display:none">
-                    </a>
-                </td>
-            </tr>
-            <tr>
-                <td colspan="2">
-                    <div style="margin-left:4px;font-size:12px">照片描述：</div>
-                    <div id="UEditor">
-                        <script id="editor" type="text/plain" style="width:1024px;height:500px;">
-                        </script>
-                    </div>
+        <form method="post" action="@Url.Action("SaveImageChange", "Interaction")">
+            @Html.HiddenFor(model => model.ID);
+            <table width="80%" align="center" class="TableBlock">
+                <tr style="height:50px">
+                    <td style="width:146px;" align="center">分享给：</td>
+                    <td>
+                        <textarea class="BigStatic">@ViewBag.SharesName</textarea>
+                    </td>
+                </tr>
+                <tr>
+                    <td align="center">图片预览：</td>
+                    <td><img style="margin:4px;" name="ImagePath" src="@Html.DisplayFor(model => model.ImagePath)" /></td>
+                </tr>
+                <tr>
+                    <td align="center">附件文档：</td>
+                    <td>@Html.EditorFor(model => model.Appendix)</td>
+                </tr>
+                <tr>
+                    <td align="center">附件上传：</td>
+                    <td>
+                        <a class="addfile" href="javascript:;">
+                            添加附件
+                            <input class="addfile" type="file" size="1" style="display:none">
+                        </a>
+                    </td>
+                </tr>
+                <tr>
+                    <td colspan="2">
+                        <div style="margin-left:4px;font-size:12px">照片描述：</div>
+                        <div id="editor" style="width:1120px;height:500px;"></div>
                 </td>
             </tr>
             <tr align="center">
                 <td nowrap="" colspan="2" class="TableControl">
-                    <input class="BigButton" type="button" value="保存" />
+                    <input class="BigButton" type="submit" value="保存" />
                     <input style="margin-left:30px;" class="BigButton" type="button" value="关闭" />
                 </td>
             </tr>
         </table>
-    </div>
-    <script type="text/javascript">
-        //实例化编辑器
-        //建议使用工厂方法getEditor创建和引用编辑器实例，如果在某个闭包下引用该编辑器，直接调用UE.getEditor('editor')就能拿到相关的实例
-        var ue = UE.getEditor('editor');
-    </script>
+    </form>
+</div>
 </body>
+<script type="text/javascript">
+    //实例化编辑器
+    //建议使用工厂方法getEditor创建和引用编辑器实例，如果在某个闭包下引用该编辑器，直接调用UE.getEditor('editor')就能拿到相关的实例
+    var ue = UE.getEditor('editor');
+    ue.ready(function () {
+        //设置编辑器的内容
+        alert("@ViewBag.TT ");
+        ue.execCommand('insertHtml', "@Html.DisplayFor(model => model.Description)<p>我的任务</p>");
+    });
+</script>
