--- a/MvcGraduate/MvcGraduate/Views/Interaction/GetImagesInfo.cshtml
+++ b/MvcGraduate/MvcGraduate/Views/Interaction/GetImagesInfo.cshtml
@@ -38,7 +38,7 @@
                                     <p>
                                         <a href="@Url.Action("Edit_Images", "Interaction", new { id = item.ID })">修改</a>
                                         <a href="javascript:;" onclick="window.open('@Url.Action("Details_HomeWork", "Study",new {id= item.ID})', '', 'height=500,width=820,status=1,toolbar=no,menubar=no,location=no,scrollbars=yes,left=200,top=100,resizable=yes');">分享</a>
-                                        <a href="#" onclick="Delete_This(@item.ID)">删除</a>
+                                        <a href="javascript:;" onclick="Delete_This(@item.ID)">删除</a>
                                     </p>
                                 </td>
                             </tr>
@@ -47,7 +47,7 @@
                     <tr>
                         <td colspan="8" style="text-align:left;">
                             <input type="checkbox" onclick="Check_all(this);"><label>全选</label>&nbsp;
-                            <a onclick="Delete_Checked()" title="删除所选照片评论">
+                            <a href="javascript:;" onclick="Delete_Checked()" title="删除所选照片评论">
                                 <img src="~/Images/delete.gif" style="vertical-align:middle">删除
                             </a>&nbsp;
                         </td>
