--- a/MvcGraduate/MvcGraduate/Views/Interaction/Index.cshtml
+++ b/MvcGraduate/MvcGraduate/Views/Interaction/Index.cshtml
@@ -74,15 +74,29 @@
         
     </script>
 }
-<div class="navigation_centre">
-    <div class="navigation_centre_left">
-        <div class="navigation_menu_bg" onclick="ManageImage()">照片管理</div>
-        <div onclick="GetShare_ImagesInfo()">分享照片</div>
-        <div onclick="GetArticle()">文章管理</div>
-        <div onclick="GetShare_Article()">分享文章</div>
-        <div onclick="GetQuestions()">我的提问</div>
-    </div>
-    <div class="navigation_centre_right">
 
+<div id="zhuye">
+    <div class="common_top">
+        <ul>
+            <li><img src="~/Images/sys_message_ico.png" /></li>
+            <li class="no_news"><a href="#">无信息</a></li>
+            <li><img src="~/Images/sys_message_ico.png" /></li>
+            <li class="no_news"><a href="#">无信息</a></li>
+            <li><img src="~/Images/sys_message_ico.png" /></li>
+            <li class="no_news"><a href="#">无信息</a></li>
+            <li class="gengduo"><a href="#">更多>></a></li>
+        </ul>
+    </div>
+    <div class="navigation_centre">
+        <div class="navigation_centre_left">
+            <div class="navigation_menu_bg" onclick="ManageImage()">照片管理</div>
+            <div onclick="GetShare_ImagesInfo()">分享照片</div>
+            <div onclick="GetArticle()">文章管理</div>
+            <div onclick="GetShare_Article()">分享文章</div>
+            <div onclick="GetQuestions()">我的提问</div>
+        </div>
+        <div class="navigation_centre_right">
+
+        </div>
     </div>
 </div>
