--- a/MvcGraduate/MvcGraduate/Views/Interaction/Edit_Images.cshtml
+++ b/MvcGraduate/MvcGraduate/Views/Interaction/Edit_Images.cshtml
@@ -6,6 +6,8 @@
     @* UEditor start *@
     <script type="text/javascript" charset="utf-8" src="~/Content/UEditor/ueditor.config.js"></script>
     <script type="text/javascript" charset="utf-8" src="~/Content/UEditor/ueditor.all.min.js"> </script>
+    <script type="text/javascript" charset="utf-8" src="~/Content/UEditor/ueditor.all.js"> </script>
+    <link href="~/Content/UEditor/themes/iframe.css" rel="stylesheet" />
     <!--建议手动加在语言，避免在ie下有时因为加载语言失败导致编辑器加载失败-->
     <!--这里加载的语言文件会覆盖你在配置项目里添加的语言类型，比如你在配置项目里配置的是英文，这里加载的中文，那最后就是中文-->
     <script type="text/javascript" charset="utf-8" src="~/Content/UEditor/lang/zh-cn/zh-cn.js"></script>
@@ -21,7 +23,7 @@
             </tr>
         </table>
         <form method="post" action="@Url.Action("SaveImageChange", "Interaction")">
-            @Html.HiddenFor(model => model.ID);
+            @Html.HiddenFor(model => model.ID)
             <table width="80%" align="center" class="TableBlock">
                 <tr style="height:50px">
                     <td style="width:146px;" align="center">分享给：</td>
@@ -68,6 +70,8 @@
     var ue = UE.getEditor('editor');
     ue.ready(function () {
         //设置编辑器的内容
-        ue.execCommand('insertHtml', "@Html.Raw(Model.Description)<p>我的任务</p>");
+        //这边有个问题就是 的scription含有双引号，外面又是双引号，会产生问题。。。所以要注意
+        ue.execCommand('insertHtml', '@Html.Raw(Model.Description)');
+        //测试：<p><img src="http://img.baidu.com/hi/jx2/j_0001.gif"/></p>
     });
 </script>
