基本工作都已完成。 下面开始登陆界面

--- a/MvcGraduate/MvcGraduate/Views/Grade/Details_SubjectMaterial.cshtml
+++ b/MvcGraduate/MvcGraduate/Views/Grade/Details_SubjectMaterial.cshtml
@@ -43,7 +43,7 @@
             </tr>
             <tr align="center">
                 <td nowrap="" colspan="2" class="TableControl">
-                    <input class="BigButton" type="button" value="关闭" />
+                    <input class="BigButton" type="button" value="关闭" onclick="window.close()" />
                 </td>
             </tr>
         </table>
