--- a/MvcGraduate/MvcGraduate/Views/Home/Index.cshtml
+++ b/MvcGraduate/MvcGraduate/Views/Home/Index.cshtml
@@ -61,7 +61,7 @@
     </script>
 }
 
-<div id="zhuye" style=" width: 1125px;">
+<div id="zhuye" style=" height: 1225px;">
     <div class="common_top">
         <ul>
             <li><img src="~/Images/sys_message_ico.png" /></li>
