--- a/MvcGraduate/MvcGraduate/Views/Interaction/SaveChange.cshtml
+++ b/MvcGraduate/MvcGraduate/Views/Interaction/SaveChange.cshtml
@@ -50,7 +50,7 @@
         <tbody>
             <tr>
                 <td class="center">
-                    <div class="msg-content">成功录入照片管理信息！</div>
+                    <div class="msg-content">成功录入 @ViewBag.Title 管理信息！</div>
                 </td>
             </tr>
         </tbody>
