--- a/MvcGraduate/MvcGraduate/Views/Interaction/ShareComment.cshtml
+++ b/MvcGraduate/MvcGraduate/Views/Interaction/ShareComment.cshtml
@@ -1,7 +1,7 @@
 ﻿<div class="frame_main">
     <ul>
         <li class="frame_title_line">
-            <div class="frame_title">查看照片评论</div>
+            <div class="frame_title">查看 @ViewBag.Title 评论</div>
         </li>
 
         <li class="detaile_line">
