--- a/MvcGraduate/MvcGraduate/Views/Interaction/Edit_Article.cshtml
+++ b/MvcGraduate/MvcGraduate/Views/Interaction/Edit_Article.cshtml
@@ -19,56 +19,68 @@
                 </td>
             </tr>
         </table>
-        <table width="80%" align="center" class="TableBlock">
-            <tr>
-                <td style="width:146px" align="center">文章标题：</td>
-                <td>@Html.EditorFor(model=>model.Title)</td>
-            </tr>
-            <tr>
-                <td align="center">撰写人：</td>
-                <td>@Html.EditorFor(model => model.Students.Name)</td>
-            </tr>
-            <tr>
-                <td align="center">写作日期：</td>
-                <td>@Html.EditorFor(model => model.Time)</td>
-            </tr>
-            <tr style="height:50px">
-                <td align="center">分享给：</td>
-                <td>
-                    <textarea class="BigStatic">@ViewBag.SharesName</textarea>
-                </td>
-            </tr>
-            <tr>
-                <td align="center">附件文档：</td>
-                <td>@Html.EditorFor(model => model.Appendix)</td>
-            </tr>
-            <tr>
-                <td align="center">附件上传：</td>
-                <td>
-                    <a class="addfile" href="javascript:;">添加附件
-                    <input class="addfile" type="file" size="1" style="display:none"></a>
-                </td>
-            </tr>
-            <tr>
-                <td colspan="2">
-                    <div>文章内容：</div>
-                    <div id="UEditor">
-                        <script id="editor" type="text/plain" style="width:1024px;height:500px;">
-                        </script>
-                    </div>
-                </td>
-            </tr>
-            <tr align="center">
-                <td nowrap="" colspan="2" class="TableControl">
-                    <input class="BigButton" type="button" value="保存" />
-                    <input style="margin-left:30px;" class="BigButton" type="button" value="关闭" />
-                </td>
-            </tr>
-        </table>
+        @using (Html.BeginForm("SaveChange", "Interaction", FormMethod.Post))
+        {
+            @Html.HiddenFor(model => model.ID)
+            @Html.Hidden("Sign", "Article")
+            <table width="80%" align="center" class="TableBlock">
+                <tr>
+                    <td style="width:146px" align="center">文章标题：</td>
+                    <td>@Html.EditorFor(model => model.Title)</td>
+                </tr>
+                <tr>
+                    <td align="center">撰写人：</td>
+                    <td>@Html.EditorFor(model => model.Students.Name)</td>
+                </tr>
+                <tr>
+                    <td align="center">写作日期：</td>
+                    <td>@Html.EditorFor(model => model.Time)</td>
+                </tr>
+                <tr style="height:50px">
+                    <td align="center">分享给：</td>
+                    <td>
+                        <textarea class="BigStatic">@ViewBag.SharesName</textarea>
+                    </td>
+                </tr>
+                <tr>
+                    <td align="center">附件文档：</td>
+                    <td>@Html.EditorFor(model => model.Appendix)</td>
+                </tr>
+                <tr>
+                    <td align="center">附件上传：</td>
+                    <td>
+                        <a class="addfile" href="javascript:;">
+                            添加附件
+                            <input class="addfile" type="file" size="1" style="display:none">
+                        </a>
+                    </td>
+                </tr>
+                <tr>
+                    <td colspan="2">
+                        <div>文章内容：</div>
+                        <div id="UEditor">
+                            <script id="editor" type="text/plain" style="width:1120px;height:500px;"></script>
+                        </div>
+                    </td>
+                </tr>
+                <tr align="center">
+                    <td nowrap="" colspan="2" class="TableControl">
+                        <input class="BigButton" type="submit" value="保存" />
+                        <input style="margin-left:30px;" class="BigButton" type="button" value="关闭" onclick="window.close()" />
+                    </td>
+                </tr>
+            </table>
+        }
     </div>
-    <script type="text/javascript">
+</body>
+<script type="text/javascript">
     //实例化编辑器
     //建议使用工厂方法getEditor创建和引用编辑器实例，如果在某个闭包下引用该编辑器，直接调用UE.getEditor('editor')就能拿到相关的实例
     var ue = UE.getEditor('editor');
-    </script>
-</body>
+    ue.ready(function () {
+        //设置编辑器的内容
+        //这边有个问题就是 的scription含有双引号，外面又是双引号，会产生问题。。。所以要注意
+        ue.execCommand('insertHtml', '@Html.Raw(Model.Contents)');
+        //测试：<p><img src="http://img.baidu.com/hi/jx2/j_0001.gif"/></p>
+    });
+</script>
