--- a/MvcGraduate/MvcGraduate/Views/Interaction/GetArticle.cshtml
+++ b/MvcGraduate/MvcGraduate/Views/Interaction/GetArticle.cshtml
@@ -57,7 +57,7 @@
                                         <a href="@Url.Action("Edit_Article", "Interaction", new { id = @item.ID })">修改</a>
                                         <a href="javascript:;" onclick="window.open('@Url.Action("Details_HomeWork", "Study",new {id= item.ID})', '', 'height=500,width=820,status=1,toolbar=no,menubar=no,location=no,scrollbars=yes,left=200,top=100,resizable=yes');">分享</a>
                                         <a href="javascript:;" onclick="Delete_This(@item.ID)">删除</a>
-                                        <a href="#">管理评论</a>
+                                        <a href="javascript:;" onclick="GetArticle_Comments(@item.ID)">管理评论</a>
                                     </td>
                                 </tr>
                             }
