--- a/MvcGraduate/MvcGraduate/Views/Interaction/GetImagesInfo.cshtml
+++ b/MvcGraduate/MvcGraduate/Views/Interaction/GetImagesInfo.cshtml
@@ -33,7 +33,7 @@
                                 <td>
                                     <p>
                                         <a href="javascript:;" onclick="window.open('@Url.Action("Details_Images", "Interaction", new { id = item.ID })', '', 'height=500,width=820,status=1,toolbar=no,menubar=no,location=no,scrollbars=yes,left=200,top=100,resizable=yes');">详情</a>
-                                        <a href="#" onclick="GetImages_Comments(@item.ID)">管理评论</a>
+                                        <a href="javascript:;" onclick="GetImages_Comments(@item.ID)">管理评论</a>
                                     </p>
                                     <p>
                                         <a href="@Url.Action("Edit_Images", "Interaction", new { id = item.ID })">修改</a>
