--- a/MvcGraduate/MvcGraduate/Views/Interaction/GetShareArticle.cshtml
+++ b/MvcGraduate/MvcGraduate/Views/Interaction/GetShareArticle.cshtml
@@ -26,7 +26,7 @@
                                 <td>
                                     <p>
                                         <a href="javascript:;" onclick="window.open('@Url.Action("Details_Article", "Interaction", new { id = item.ID })', '', 'height=500,width=820,status=1,toolbar=no,menubar=no,location=no,scrollbars=yes,left=200,top=100,resizable=yes');">详情</a>
-                                        <a href="#">查看评论</a>
+                                        <a href="javascript:;" onclick="GetShareArticle_Comments(@item.ID)">查看评论</a>
                                     </p>
                                 </td>
                             </tr>
