--- a/MvcGraduate/MvcGraduate/Content/CSS/zhuye.css
+++ b/MvcGraduate/MvcGraduate/Content/CSS/zhuye.css
@@ -306,12 +306,17 @@ ul,li{
                 }
                     .zhuye_centre_right_4_tiwen li.newtiwen
                     {
+                        margin-left:-16px;
+                        margin-bottom:6px;
+                        height: 20px;
+                        color: #4993b3;
+                        font-weight: 600;
                         list-style-type: none;
                     }
                      .zhuye_centre_right_4_tiwen li.newtiwen a
                     {
                         color:#49B0D8;
-                        font-size:12px;
+                        font-size:16px;
                         font-weight:600;
                     }
                         .zhuye_centre_right_4_tiwen li.newtiwen a:hover
