--- a/MvcGraduate/MvcGraduate/Views/Grade/Index.cshtml
+++ b/MvcGraduate/MvcGraduate/Views/Grade/Index.cshtml
@@ -7,12 +7,21 @@
 @section Scripts {
 <script>
     $('.title_navigate a:eq(2) div').addClass('logo_left_title_select');
-    $.post(
-        "@Url.Action("GetBanWei", "Grade")",
-        { "id": 1208203301 },
-        function (data) {
-            $('#Js_Study_RightBigDiv').html(data);
-        });
+    $(document).ready(function(){
+        if ("@ViewBag.Redirect" == "RedirectToMaterial") {
+            $('.navigation_centre_left div').removeClass('navigation_menu_bg');
+            $('.navigation_centre_left div:eq(2)').addClass('navigation_menu_bg');
+            GetSubjectMaterial();
+        }else{
+            $.post(
+                "@Url.Action("GetBanWei", "Grade")",
+                { "id": 1208203301 },
+                function (data) {
+                    $('#Js_Study_RightBigDiv').html(data);
+                });
+        }
+    })
+
     function GetBanwei() {
         $.post(
             "@Url.Action("GetBanWei", "Grade")",
