--- a/MvcGraduate/MvcGraduate/Views/Home/GetShareImages.cshtml
+++ b/MvcGraduate/MvcGraduate/Views/Home/GetShareImages.cshtml
@@ -2,19 +2,20 @@
 {
     var i = 0;
     <div class="HomeImageDiv">
-        @if (i++ < 6)
+        @foreach (var item in Model)
         {
-            foreach (var item in Model)
+            if (i++ < 6)
             {
-                <div class="photo_Block">
-                    <div class="img">
-                        <a href="#"><img src="@item" /></a>
-                    </div>
-                    <div class="photo_Block_text">
-                        <a href="#" style="float: left;">评论</a>
-                    </div>
-                </div>
+                break;
             }
+            <div class="photo_Block">
+                <div class="img">
+                    <a href="#"><img src="@item" /></a>
+                </div>
+                <div class="photo_Block_text">
+                    <a href="#" style="float: left;">评论</a>
+                </div>
+            </div>
         }
     </div>
 }
