--- a/MvcGraduate/MvcGraduate/Views/Home/Index.cshtml
+++ b/MvcGraduate/MvcGraduate/Views/Home/Index.cshtml
@@ -7,57 +7,99 @@
 
 @section Scripts { 
     <script>
+        function RedirectToInteraction() {
+            location.href = "@Url.Action("Index", "Interaction", new { RedirectStr = "RedirectToArticle" })";
+        }
+        function RedirectToQuestion() {
+            location.href = "@Url.Action("Index", "Interaction", new { RedirectStr = "RedirectToQuestion" })";
+        }
+        function RedirectToImage() {
+            location.href = "@Url.Action("Index", "Interaction")";
+        }
+        function RedirectToNotifyNews() {
+            location.href = "@Url.Action("Index", "NotifyNews")";
+        }
+        function RedirectToStudy() {
+            location.href = "@Url.Action("Index", "Study")";
+        }
+        function RedirectToMaterial() {
+            location.href = "@Url.Action("Index", "Grade", new {RedirectStr="RedirectToMaterial" })";
+        }
+        function SubmitQuestion() {
+            $.post(
+                "@Url.Action("SubmitQuestion", "Home")",
+                { "id": 1208203301, "info": $('#zhuye_TiWenKuang').val() },
+                function (data) {
+                    if (data == "True")
+                        alert("保存成功");
+                    else
+                        alert("保存失败");
+            });
+        }
         $('.title_navigate a:eq(0) div').addClass('logo_left_title_select');
-        //填充分享的文章
-        $.post(
-            "@Url.Action("GetMyArt", "Home")",
-            { "id": 1208203301 },
-            function (data) {
-                $('#JS_myArtDiv').html(data);
-            });
-        //课程表
-        $.post(
-            "@Url.Action("GetSchedule", "Home")",
-            { "id": 1208203301 },
-            function (data) {
-                $('#JS_Home_TimeTable_Div').html(data);
-             });
-        $.post(
-            "@Url.Action("GetShareArt", "Home")",
-            { "id": 1208203301 },
-            function (data) {
-                $('#JS_ShareArtDiv').html(data);
-            });
-        $.post(
-            "@Url.Action("GetNotify", "Home")",
-            { "id": 1208203301 },
-            function (data) {
-                $('#JS_NotifyDiv').html(data);
-            });
-        $.post(
-            "@Url.Action("GetMyImages", "Home")",
-            { "id": 1208203301 },
-            function (data) {
-                $('#JS_MyImageDiv').html(data);
-            });
-        $.post(
-            "@Url.Action("GetShareImages", "Home")",
-            { "id": 1208203301 },
-            function(data) {
-                $('#JS_ShareImageDiv').html(data);
-            });
-        $.post(
-            "@Url.Action("GetTeacherImages", "Home")",
-            { "id": 1208203301 },
-            function (data) {
-                $('#JS_TeacherHomeDiv').html(data);
-            });
-        $.post(
-            "@Url.Action("GetBanWei", "Home")",
-            { "id": 1208203301 },
-            function (data) {
-                $('#JS_BanWeiHomeDiv').html(data);
-            });
+
+            //填充分享的文章
+            $.post(
+                "@Url.Action("GetMyArt", "Home")",
+                { "id": 1208203301 },
+                function (data) {
+                    $('#JS_myArtDiv').html(data);
+                });
+            //课程表
+            $.post(
+                "@Url.Action("GetSchedule", "Home")",
+                { "id": 1208203301 },
+                function (data) {
+                    $('#JS_Home_TimeTable_Div').html(data);
+                });
+            $.post(
+                "@Url.Action("GetShareArt", "Home")",
+                { "id": 1208203301 },
+                function (data) {
+                    $('#JS_ShareArtDiv').html(data);
+                });
+            $.post(
+                "@Url.Action("GetNotify", "Home")",
+                { "id": 1208203301 },
+                function (data) {
+                    $('#JS_NotifyDiv').html(data);
+                });
+            $.post(
+                "@Url.Action("GetQuestion", "Home")",
+                { "id": 1208203301 },
+                function (data) {
+                    $('#JS_QuestionDiv').html(data);
+                });
+            $.post(
+                "@Url.Action("GetMyImages", "Home")",
+                { "id": 1208203301 },
+                function (data) {
+                    $('#JS_MyImageDiv').html(data);
+                });
+            $.post(
+                "@Url.Action("GetShareImages", "Home")",
+                { "id": 1208203301 },
+                function(data) {
+                    $('#JS_ShareImageDiv').html(data);
+                });
+            $.post(
+                "@Url.Action("GetHonour", "Home")",
+                { "id": 1208203301 },
+                function (data) {
+                    $('#JS_DashiDiv').html(data);
+                });
+            $.post(
+                "@Url.Action("GetTeacherImages", "Home")",
+                { "id": 1208203301 },
+                function (data) {
+                    $('#JS_TeacherHomeDiv').html(data);
+                });
+            $.post(
+                "@Url.Action("GetBanWei", "Home")",
+                { "id": 1208203301 },
+                function (data) {
+                    $('#JS_BanWeiHomeDiv').html(data);
+                });
     </script>
 }
 
@@ -77,47 +119,46 @@
         <div class="zhuye_centre_left">
             <div class="zhuye_centre_left_1">
                 <div class="wenzhang">
-                    <a href="#"><img src="~/Images/article.png" id="article" /></a>
+                    <a href="#" onclick="RedirectToInteraction()"><img src="~/Images/article.png" id="article" /></a>
                     <ul>
-                        <li><a href="#">我的文章</a></li>
-                        <li class="number"><a href="#">@ViewBag.AricleCount </a></li>
+                        <li><a href="#" onclick="RedirectToInteraction()">我的文章</a></li>
+                        <li class="number"><a href="#" onclick="RedirectToInteraction()">@ViewBag.AricleCount </a></li>
                     </ul>
                 </div>
                 <div class="zhaopian">
-                    <a href="#"><img src="~/Images/my_photo.png" id="article" /></a>
+                    <a href="#" onclick="RedirectToImage()"><img src="~/Images/my_photo.png" id="article" /></a>
                     <ul>
-                        <li><a href="#">我的照片</a></li>
-                        <li class="number"><a href="#">@ViewBag.ImageCount</a></li>
+                        <li><a href="#" onclick="RedirectToImage()">我的照片</a></li>
+                        <li class="number"><a href="#" onclick="RedirectToImage()">@ViewBag.ImageCount</a></li>
                     </ul>
                 </div>
-                @*通知*@
                 <div class="xiaoxi">
-                    <a href="#"><img src="~/Images/message.png" id="article" /></a>
+                    <a href="#" onclick="RedirectToNotifyNews()"><img src="~/Images/message.png" id="article" /></a>
                     <ul>
-                        <li><a href="#">消息</a></li>
-                        <li class="number"><a href="#">@ViewBag.NotifyCount</a></li>
+                        <li><a href="#" onclick="RedirectToNotifyNews()">消息</a></li>
+                        <li class="number"><a href="#" onclick="RedirectToNotifyNews()">@ViewBag.NotifyCount</a></li>
                     </ul>
                     <div id="JS_NotifyDiv"></div>
                 </div>
                 <div class="tiwen">
-                    <a href="#"><img src="~/Images/ask.png" id="article" /></a>
+                    <a href="#" onclick="RedirectToQuestion()"><img src="~/Images/ask.png" id="article" /></a>
                     <ul>
-                        <li><a href="#">提问</a></li>
-                        <li class="number"><a href="#">@ViewBag.QuestionCount</a></li>
+                        <li><a href="#" onclick="RedirectToQuestion()">提问</a></li>
+                        <li class="number"><a href="#" onclick="RedirectToQuestion()">@ViewBag.QuestionCount</a></li>
                     </ul>
                 </div>
                 <div class="zuoye">
-                    <a href="#"><img src="~/Images/homework.png" id="article" /></a>
+                    <a href="#" onclick="RedirectToStudy()"><img src="~/Images/homework.png" id="article" /></a>
                     <ul>
-                        <li><a href="#">电子作业</a></li>
-                        <li class="number"><a href="#">@ViewBag.HomeWorkCount</a></li>
+                        <li><a href="#" onclick="RedirectToStudy()">电子作业</a></li>
+                        <li class="number"><a href="#" onclick="RedirectToStudy()">@ViewBag.HomeWorkCount</a></li>
                     </ul>
                 </div>
                 <div class="ziliao">
-                    <a href="#"><img src="~/Images/kc_ziliao.png" id="article" /></a>
+                    <a href="#" onclick="RedirectToMaterial()"><img src="~/Images/kc_ziliao.png" id="article" /></a>
                     <ul>
-                        <li><a href="#">课程资料</a></li>
-                        <li class="number"><a href="#">@ViewBag.MaterialCount</a></li>
+                        <li><a href="#" onclick="RedirectToMaterial()">课程资料</a></li>
+                        <li class="number"><a href="#" onclick="RedirectToMaterial()">@ViewBag.MaterialCount</a></li>
                     </ul>
                 </div>
             </div>
@@ -134,7 +175,8 @@
                 </ul>
             </div>
             <div class="zhuye_centre_left_4">
-                <img src="~/Images/dashiji.png" width="150" height="50" id="menu_bg" />
+                <div><img src="~/Images/dashiji.png" width="150" height="50" id="menu_bg" /></div>
+                <div id="JS_DashiDiv"></div>
             </div>
         </div>
         <div id="zhuye_centre_centre">
@@ -190,14 +232,9 @@
                     <img src="Images/tiwen.png" width="153" height="49" />
                 </div>
                 <div class="zhuye_centre_right_4_tiwen">
-                    <textarea class="zhuye_centre_right_4_tiwen_kuang"></textarea>
-                    <a href="#"><div class="zhuye_centre_right_4_tiwen_2">提问</div></a>
-                    <ul>
-                        <li class="newtiwen"><a href="#">最新提问</a></li>
-                        <li><a href="#">123123</a></li>
-                        <li><a href="#">123123</a></li>
-                        <li><a href="#">123123</a></li>
-                    </ul>
+                    <textarea class="zhuye_centre_right_4_tiwen_kuang" id="zhuye_TiWenKuang"></textarea>
+                    <a href="#"><div class="zhuye_centre_right_4_tiwen_2" onclick="SubmitQuestion()">提问</div></a>
+                    <div id="JS_QuestionDiv"></div>
                 </div>
 
             </div>
